# pose_estimation

./: .gitmodules  FeatureDetectorDescriptor.md  Notes_of_Nghia_Ho.md  OpenCV_NOTES.md  README.md
5point-cmake/with_eigen/: CMakeLists.txt  REAMDE.md
5point-cmake/with_eigen/5point_Eigen/: 5point.h  main.cpp
5point-cmake/with_eigen/cmake/: fivePointEigenConfig.cmake
5point-cmake/with_opencv/: CMakeLists.txt
5point-cmake/with_opencv/5point/: main.cpp
5point-cmake/with_opencv/cmake/: fivePointConfig.cmake
5point-cmake/with_opencv/example/: CMakeLists.txt
5point_cmake/: CMakeLists.txt  demo.cpp  format_code.bat  perfectPoints.cpp  pose_estimation_2d2d_test.cpp  pose_estimation_refine_test.cpp  pose_estimation_test.cpp
5point_cmake/5point/: main.cpp
5point_cmake/AlglibCluster/refine_rt/: refine_with_clst_kclusters.h
5point_cmake/AlglibCluster/src/: dataanalysis.h
5point_cmake/alglib/: CMakeLists.txt  example_clst_kclusters.cpp  test.cpp
5point_cmake/alglib/cmake/: AlglibClusterConfig.cmake
5point_cmake/alglib/example/: CMakeLists.txt
5point_cmake/alglib/src/: alglibmisc.cpp  alglibmisc.h  ap.h  diffequations.h  fasttransforms.cpp  integration.cpp  integration.h  interpolation.h  linalg.cpp  optimization.cpp  optimization.h  statistics.h
5point_cmake/getRTAlgo/: getRTAlgo.cpp  getRTAlgo.h
5point_cmake/pose_estimation/: Rt_transform.cpp  Rt_transform.h  Rt_transform_test.cpp  image_utils.cpp  image_utils.h  keypoints_descriptors_utils.cpp  keypoints_descriptors_utils.h  pose_estimation.h  pose_estimation_header.h  pose_estimation_utils.cpp  pose_estimation_utils.h  refine_matches.cpp  refine_matches.h
5point_cmake/pose_estimation_2d2d/: pose_estimation_2d2d.cpp  pose_estimation_2d2d.h
AlglibCluster/example/: refine_with_clst_kclusters_test.cpp
AlglibCluster/refine_rt/: refine_with_clst_kclusters.cpp
AlglibCluster/src/: alglibinternal.h  fasttransforms.h  interpolation.cpp  specialfunctions.cpp
SfM_Aided/: CMakeLists.txt  README.md  SfM_Sequential_and_Localization.py  convert2jpg.py
SfM_Aided/Csharp_version/Csharp_call_SfM/: Csharp_call_SfM.sln
SfM_Aided/Csharp_version/Csharp_call_SfM/Csharp_call_SfM/: CmdHelper.cs  Csharp_call_SfM.csproj  SfMAiedPoseEstimation.cs
SfM_Aided/Csharp_version/Csharp_call_SfM/Csharp_call_SfM/Properties/: AssemblyInfo.cs
SfM_Aided/Geodesy/: CMakeLists.txt  registration_faked_gps_position.cpp
SfM_Aided/SfM/: CMakeLists.txt  main_SfMInit_ImageListing.cpp  relativePosePair.cpp  relativePosePair.h  relativePosePair_test.cpp
SfM_Aided/SfM/Rt_transform/: Rt_transform.cpp  Rt_transform.h
SfM_Aided/example_data/: add_query_to_im_name.sh  fake_gps_file.txt
cpp_version/: CMakeLists.txt  demo.cpp  format_code.bat  perfectPoints.cpp  pose_estimation_test.cpp  pose_estimation_test_standalone.cpp
cpp_version/AlglibCluster/: CMakeLists.txt
cpp_version/AlglibCluster/src/: alglibinternal.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  linalg.h  solvers.cpp  solvers.h  specialfunctions.h  statistics.cpp
cpp_version/getRTAlgo/: getRTAlgo.cpp
cpp_version/pose_estimation/: Rt_transform.cpp  Rt_transform_test.cpp  common_header.h  keypoints_descriptors_utils.cpp  keypoints_descriptors_utils.h  pose_estimation_utils.cpp  refine_matches.h
cpp_version/python/: CMakeLists.txt  classes_cv.cpp  classes_cv.py
opencv_gpu/: CMakeLists.txt  surf_keypoint_matcher.cpp
pose_definition/: README.md  cv2_pose_estimation.py
pose_definition/utils/: POSE3.py  cube.py
python_version/: README.md  Rt_transform.py  batch_test.py  calibrate.py  chapter4.py  common_healper.py  depth_estimation.py  format_code.bat  gui.py  image_color_utils.py  keypoints_descriptors_utils.py  linear_algebra_helper.py  perfect_points.py  pose_estimation_utils.py  ransac_Rt.py  refine.py  scene3D.py
